# pyhammer

./: .pre-commit-config.yaml  TODO.md  events.py  main.py  model.py  outcomes.py  pyproject.toml  roll.py  rules.py  table.py  test_average_damage.py  test_basic.py  test_cap_damage.py  test_damage_cap.py  test_modifiers.py  testutils.py  unit.py  view.py  weapon.py
actions/: __init__.py  attack.py  base.py  damage.py  feel_no_pain.py  hit.py  null.py  options.py  save.py  wound.py
docs/: Gauss reaper.html  Overlord's blade.html  Reductor pistol.html  Skorpekh hyperphase weapons.html  index.html
docs/Amonhotekhs Guard (Necron)/Doomstalker (damaged)/: Doomsday Blaster (heavy).csv  Doomsday Blaster (heavy).html  Doomsday Blaster (moved).csv  (+8 more)
docs/Deathwatch Combat Patrol/: Intercessor CCW.html  Twin power fists.html
docs/Necron/: Gauss blaster C5.html  Gauss blaster.html  Tesla carbine C5.html  Tesla carbine.html
docs/Necron Combat Patrol/: Doom stalker limbs.html  Doomsday blaster.html
input/: Amonhotekhs Guard (Necron).csv  Armiger Trailblazers (Knight).csv  Deathwatch.csv  Mordekais Judgement (Dark angles).csv  Necron Combat Patrol.csv  Necrons.csv  Vigil Force Alphion(Deathwatch).csv
tables/: Absolvor bolt pistol.html  Appotheecary CCW.html  Astartes grenade launcher - frag.html  Astartes grenade launcher - krak.html  Bolt pistol.html  Bolt rifle.html  Feeder mandibles.html  Flamestorm gauntlets.html  Gauss flayer.html  Lietenant Bolt pistol.html  Master crafted power weapon.html  Tachyon arrow.html  Twin gauss flayer.html  Warrior CCW.html  index.html
(+775 files in other folders)
