[project]
name = "pyhammer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.4",
    "line-profiler>=4.2.0",
    "mypy>=1.15.0",
    "polars>=1.25.2",
    "pre-commit>=4.1.0",
    "pyinstrument>=5.0.1",
    "ruff>=0.9.7",
]

[tool.ruff]
indent-width=4
line-length=120
builtins = ['ic']

[tool.ruff.lint]
select=["E","F","N", "B"]
ignore = ["F401"]
